--- a/Contact.html
+++ b/Contact.html
@@ -23,7 +23,9 @@
         <input type="text" placeholder="Enter message" id="message" name="Message" required>
 </div>
         <button>Sumbit Message</button>
-        <h5>To Back<a href="index.html"> In Home Page</a></h5>
+    <div class="home">
+        <button><a href="index.html">Home</a></button>
+    </div>
     </form>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbyH00HDlB1bArBqUhXzRvyH-W158sB1vr6vUYm2uNXTtoAmQnbuMhSKibKQS0UYluXmkw/exec'
