--- a/Science.html
+++ b/Science.html
@@ -6,27 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <title>Science</title>
+    <link rel="stylesheet" type="text/css" href="/MoviesFolder/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/MoviesFolder/stl.css">
     <link rel="stylesheet" type="text/css" href="Background.css">
 </head>
 <body>
-  <header class="text-black-600 body-font">
+  <header class="text-gray-600 body-font">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
       <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewbox="0 0 24 24">
           <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
         </svg>
-        <span class="ml-3 text-xl"><a href="">Spipixel</a></span>
+        <span class="ml-3 text-xl">Spipixel</span>
       </a>
-      <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
-        <div class="buton">
-        <button class="button button1"><a href="index.html">Home</a></button>
-        <button class="button button2"><a href="Blog.html">Blog</a></button>
-        <button class="button button3"><a href="Contact.css"><a href="Contact.html" class="mr-5">Contact</a></a></button>
-        <button class="button button4"><a href="Shop.html"><a href="Shop.html" class="mr-5">Shop</a></a></button>
-        <button class="button button5"><a href="About.html"><a href="About.html" class="mr-5">About</a></a></button>
-      </div>
+      <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-Black-400	flex flex-wrap items-center text-base justify-center">
+        <div class="navbar">
+            <a class="mr-5 hover:text-gray-900" href="index.html">Home</a>
+            <a class="mr-5 hover:text-gray-900" href="Movies.html">Movies</a>
+            <a class="mr-5 hover:text-gray-900" href="Shop.html">Shop</a>
+            <a class="mr-5 hover:text-gray-900" href="Blog.html">Blog</a>
+            <a class="mr-5 hover:text-gray-900" href="About.html">About</a>
+        </div>
+        <div class="navbar">
+            <div class="dropdown">
+              <button class="dropbtn">Dropdown 
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+              </div>
+            </div> 
+          </div>
       </nav>
-      <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0"><a href="SignIn.html">Sign in</a>
+      <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">Contact
         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewbox="0 0 24 24">
           <path d="M5 12h14M12 5l7 7-7 7"></path>
         </svg>
@@ -34,6 +49,7 @@
     </div>
   </header>
 
+  
       <section class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto">
           <div class="flex flex-col text-center w-full mb-20">
