--- a/Blog.html
+++ b/Blog.html
@@ -9,7 +9,7 @@
     <title>Blog</title>
     <link rel="stylesheet" type="text/css" href="/MoviesFolder/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="/MoviesFolder/stl.css">
+    <link rel="stylesheet" type="text/css" href="stl.css">
 </head>
 <body>
   <header class="text-gray-600 body-font">
