--- a/Brahmastra.html
+++ b/Brahmastra.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <title>Brahmastra</title>
-    <link rel="stylesheet" type="text/css" href="/MoviesFolder/style.css">
+    <link rel="stylesheet" type="text/css" href="style1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="/MoviesFolder/stl.css">
+    <link rel="stylesheet" type="text/css" href="stl1.css">
 
 </head>
 <body>
@@ -80,7 +80,7 @@
 </span>
 </div>
 <div class="imgi">
-  <img style="margin: auto; border: 0; margin-block-end: 40px; " src="/Images/Brahmastra1.jpg" alt="Brahmastra.jpg">
+  <img style="margin: auto; border: 0; margin-block-end: 40px; " src="./Images/Brahmastra1.jpg" alt="Brahmastra.jpg">
 </div>
 
   <h1 style="text-align: center; font-size:18px; font-weight: 1200; color: blue; margin-block-end: 10px;"><a href="">[HOW TO DOWNLOAD]</a></h1>
@@ -104,8 +104,8 @@
      </div>
      <br>
      <div>
-      <img style="margin: auto; border: 0; margin-block-end: 40px;" src="/Images/p.jpg" width="400px" height="20px">
-      <img style="margin: auto; border: 0; margin-block-end: 40px;" src="/Images/vlcsnap-2022-09-10-00h41m24s573.png" width="400px" height="20px">
+      <img style="margin: auto; border: 0; margin-block-end: 40px;" src="./Images/p.jpg" width="400px" height="20px">
+      <img style="margin: auto; border: 0; margin-block-end: 40px;" src="./Images/vlcsnap-2022-09-10-00h41m24s573.png" width="400px" height="20px">
      </div>
      <hr style="height:2px;border:none;color:#252525;background-color:#252525; margin-left: 50px; margin-right: 50px; margin-block-end: 20px; margin-top: 20px;">
      <div>
