--- a/Movies.html
+++ b/Movies.html
@@ -7,7 +7,7 @@
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <title>Movies</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="stl.css">
+    <link rel="stylesheet" type="text/css" href="stl1.css">
 </head>
 <body>
     <header class="text-gray-600 body-font">
@@ -66,7 +66,7 @@
         <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
           <a class="block relative h-48 rounded overflow-hidden">
             <div class="contain">
-                <img class="object-cover object-center w-full h-full block" alt="BrahMastra"  src="/Images/Brahmastra.jpg">
+                <img class="object-cover object-center w-full h-full block" alt="BrahMastra"  src="./Images/Brahmastra.jpg">
             </div>
           </a>
           <div class="mt-4">
@@ -78,7 +78,7 @@
         </div>
         <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
           <a class="block relative h-48 rounded overflow-hidden">
-            <img alt="Godzilla" class="object-cover object-center w-full h-full block" src="/Images/GodZillaVSKong.jpg">
+            <img alt="Godzilla" class="object-cover object-center w-full h-full block" src="./Images/GodZillaVSKong.jpg">
           </a>
           <div class="mt-4">
             <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">HollyWood</h3>
