--- a/ProductError.html
+++ b/ProductError.html
@@ -8,7 +8,7 @@
     <title>Error</title>
     <link rel="stylesheet" type="text/css" href="/MoviesFolder/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="/MoviesFolder/stl.css">
+    <link rel="stylesheet" type="text/css" href="stl.css">
 </head>
 <body>
   <header class="text-gray-600 body-font">
