--- a/Movies.html
+++ b/Movies.html
@@ -64,7 +64,7 @@
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-wrap -m-4">
         <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
-          <a class="block relative h-48 rounded overflow-hidden">
+          <a href="Brahmastra.html" class="block relative h-48 rounded overflow-hidden">
             <div class="contain">
                 <img class="object-cover object-center w-full h-full block" alt="BrahMastra"  src="./Images/Brahmastra.jpg">
             </div>
@@ -77,7 +77,7 @@
           </div>
         </div>
         <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
-          <a class="block relative h-48 rounded overflow-hidden">
+          <a href="godzilla1.html" class="block relative h-48 rounded overflow-hidden">
             <img alt="Godzilla" class="object-cover object-center w-full h-full block" src="./Images/GodZillaVSKong.jpg">
           </a>
           <div class="mt-4">
@@ -88,13 +88,13 @@
           </div>
         </div>
         <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
-          <a class="block relative h-48 rounded overflow-hidden">
-            <img alt="ecommerce" class="object-cover object-center w-full h-full block" src="https://dummyimage.com/423x263">
+          <a href="Prey.html" class="block relative h-48 rounded overflow-hidden">
+            <img alt="Prey" class="object-cover object-center w-full h-full block" src="/Images/Prey.jpg">
           </a>
           <div class="mt-4">
-            <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">Coming Soon</h3>
-            <h2 class="text-gray-900 title-font text-lg font-medium">Coming Soon</h2>
-            <h2 class="text-gray-500 text-xs tracking-widest title-font mb-1"><a href="">Coming Soon</a></h2>
+            <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">HollyWood</h3>
+            <h2 class="text-gray-900 title-font text-lg font-medium">Prey 2022</h2>
+            <h2 class="text-gray-500 text-xs tracking-widest title-font mb-1"><a href="Prey.html">Prey (2022) WEB-DL [Hindi (ORG 5.1) & English] 1080p 720p 480p Dual Audio [x264/10Bit HEVC] HD | Full Movie</a></h2>
             <p class="mt-1">Free</p>
           </div>
         </div>
