--- a/Prey.html
+++ b/Prey.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-    <title>Brahmastra</title>
+    <title>Prey</title>
     <link rel="stylesheet" type="text/css" href="style1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="stl1.css">
@@ -50,14 +50,14 @@
         </div>
 </header>
 
-<h2 class="page-title-for-movie">Brahmastra Part One: Shiva (2022) Hindi HDCAM 1080p 720p & 480p x264 [CamRip] | Full Movie</h2>
+<h2 class="page-title-for-movie">Prey (2022) WEB-DL [Hindi (ORG 5.1) & English] 1080p 720p 480p Dual Audio [x264/10Bit HEVC] HD | Full Movie</h2>
 
 <aside class="primary-sidebar">
 <h2 class="share-content">Content</h2>
 </aside>
 <div class="home-categories-for-movies">
     <ul class="list-inline">
-        <a href="" data-wpel-link="internal"> Sep-10th, 2022 </a>
+        <a href="" data-wpel-link="internal"> Oct-7th, 2022 </a>
     </ul>
 </div>
 
@@ -73,28 +73,28 @@
 
 <div class="text-download" style="margin-left: 50px; text-align: center; margin-block-end: 40px;">
 <span style="font-family: 'Open Sans'; font-size: normal; font-weight: 600;">
-  <h3>Download BrahMastra (2022) Hindi CAMRip 720p & 480p x264
+  <h3>Download Prey (2022) WEB-DL 1080p 720p 480p Dual Audio [Hindi & English] | Full Movie [Thriller]
     <br>
-    | Full Movie Watch BrahMastra Full Movie in Hindi Online Free on<a href="index.html" style="color: blue ;"> Spipixel</a> !
+    Watch Prey Full Movie in Hindi Online Free on <a href="index.html" style="color: blue ;"> Spipixel</a> !
   </h3>
 </span>
 </div>
 <div class="imgi">
-  <img style="margin: auto; border: 0; margin-block-end: 40px; " src="./Images/Brahmastra1.jpg" alt="Brahmastra.jpg">
+  <img style="margin: auto; border: 0; margin-block-end: 40px; " src="./Images/Prey.jpg" alt="Brahmastra.jpg">
 </div>
 
   <h1 style="text-align: center; font-size:18px; font-weight: 1200; color: blue; margin-block-end: 10px;"><a href="">[HOW TO DOWNLOAD]</a></h1>
   
   <hr style="height:2px;border:none;color:#252525;background-color:#252525; margin-left: 50px; margin-right: 50px; margin-block-end: 20px; margin-top: 20px;">
   
-     <p style="font-size: 24px; text-align: center; font-weight: 600;">Brahmastra (<i>Full Movie</i>)</p>
+     <p style="font-size: 24px; text-align: center; font-weight: 600;">Prey<i> (Hindi Dubbed)</i></p>
      <div class="text-hover" style="text-align:center;">
-      <h4>iMDB Rating: <a class="hove" style="color: blue;">4.8/10</a></h4>
-      <h4>Genres: <a class="hove" style="color: blue;">Action</a> | Drama | Adventure</h4>
-      <h4><a style="font-size: normal; font-weight: 600; ">Stars:</a>Ranbir Kapoor, Alia Bhatt, Amitabh Bachchan</h4>
-      <h4><a style="font-size: normal; font-weight: 600; ">Director:</a> Sarath Mandava</h4>
-      <h4>Language: <a class="hove" style="color: red; font-size: normal; font-weight: 600;">Hindi</a></h4>
-      <h4>Quality: <a class="hove" style="color: red; font-size: normal; font-weight: 600;">HDCAMRip</a></h4>
+      <h4>iMDB Rating: <a class="hove" style="color: blue;">7.2/10</a></h4>
+      <h4>Genres: <a class="hove" style="color: blue;">Action</a> | Horror | Thriller</h4>
+      <h4><a style="font-size: normal; font-weight: 600; ">Stars:</a>Amber Midthunder, Dakota Beavers, Dane DiLiegro</h4>
+      <h4><a style="font-size: normal; font-weight: 600; ">Director:</a> Dan Trachtenberg</h4>
+      <h4>Language: <a class="hove" style="color: red; font-size: normal; font-weight: 600;"> Hindi DD5.1 + English 5.1 (Dual Audio)</a></h4>
+      <h4>Quality: <a class="hove" style="color: red; font-size: normal; font-weight: 600;">WEB-DL 1080p | 720p | 480p</a></h4>
       <h4></h4>
      </div>
 
@@ -104,12 +104,12 @@
      </div>
      <br>
      <div>
-      <img style="margin: auto; border: 0; margin-block-end: 40px;" src="./Images/p.jpg" width="400px" height="20px">
-      <img style="margin: auto; border: 0; margin-block-end: 40px;" src="./Images/vlcsnap-2022-09-10-00h41m24s573.png" width="400px" height="20px">
+      <img style="margin: auto; border: 0; margin-block-end: 40px;" src="./Images/vl.png" width="400px" height="20px">
+      <img style="margin: auto; border: 0; margin-block-end: 40px;" src="./Images/v.png" width="400px" height="20px">
      </div>
      <hr style="height:2px;border:none;color:#252525;background-color:#252525; margin-left: 50px; margin-right: 50px; margin-block-end: 20px; margin-top: 20px;">
      <div>
-      <h1 class="fit" style=" text-align: center; font-size: 30px; font-weight: 600;">Download BrahMastra (2022) HDCamRip Full Movie in Hindi :</h1>
+      <h1 class="fit" style=" text-align: center; font-size: 30px; font-weight: 600;">Prey (2022) Full Movie Dual-Audio [Hindi & English] HD</h1>
      </div> 
      <hr style="height:2px;border:none;color:#252525;background-color:#252525; margin-left: 50px; margin-right: 50px; margin-block-end: 20px; margin-top: 20px;">
 
@@ -120,29 +120,29 @@
      <div class="text-hover" style="text-align: center ; font-size: 20px; font-weight: 800; color: blue; ">
       <h4><a class="hove" >: 480p link [Coming Soon] :</a></h4>
       <hr style="height:2px;border:none;color:#252525;background-color:#252525; margin-left: 300px; margin-right: 300px; margin-block-end: 20px; margin-top: 20px;">
-      <h4><a href="https://drive.google.com/file/d/1lrJJDiOuAU3yHURFNrHI-iFZyeOKaC9l/view?usp=sharing" class="hove" >: 720p link [1.3GB] :</a></h4>
+      <h4><a href="https://drive.google.com/u/0/uc?id=1IcRI_0fmp1krAcr0EVotUZFCiVg1Zu-g&export=download" class="hove" >: 720p link [1.3GB] :</a></h4>
       <hr style="height:2px;border:none;color:#252525;background-color:#252525; margin-left: 300px; margin-right: 300px; margin-block-end: 20px; margin-top: 20px;">
       <h4><a class="hove" >: 1080p link [Coming Soon] :</a></h4>
       <hr style="height:2px;border:none;color:#252525;background-color:#252525; margin-left: 300px; margin-right: 300px; margin-block-end: 20px; margin-top: 20px;">
      </div>
 
      <div style="color: red; text-align: center; font-size: 35px; font-weight: 800;">
-      <p>Download BrahMastra (2022) Full Movie Hindi HDCamRip | Watch Online Full Movie :-</p>
+      <p>Download Prey 2022 Hindi Dubbed Movie WEB-DL 720p Dual Audio | Watch Online on HotStar :</p>
      </div>
      <div style="margin: 10px; padding: 50px;">
-      <a style=" font-size: 18px; font-weight: 800;">DESCRIPTION: :</a><p style="color: gray;">BrahMastra (Drama Movie) Hindi 720p HDRip x264 1GB Watch Online [G-Drive]  9xmovies, world4ufree, world4free, Khatrimaza 123Movies fmovies Gomovies gostream 300Mb Dual Audio Hindi Dubbed  | BrahMastra 2019 720p WEBRip x264 AC3 ESub Hindi DD5.1 Download Google Drive links Free on HDHub4u | Latest Movies Free Download & Watch Online | AMAZON PRIME | Amazon Free Download .</p>
+      <a style=" font-size: 18px; font-weight: 800;">DESCRIPTION: :</a><p style="color: gray;">Download Prey 2022 Hindi (Action Movie) Hindi Dub & English 720pBRRIP x264 1GB Watch Online [G-Drive Notice]  9xmovies, world4ufree, world4free, Khatrimaza 123Movies fmovies Gomovies gostream 300Mb Dual Audio Hindi Dubbed  | Prey 2022 Hindi 720p WEB-DL x264 AC3 ESub Dual Audio [Hindi + English] Download Google Prey links Free on HDHub4u.Monster  .</p>
      </div>
      <div style="color: red; text-align: center; font-size: 35px; font-weight: 800;">
-      <p>Download BrahMastra 2022 Full Movie Hindi – Storyline :</p>
+      <p>Download Prey 2022 Hindi Dubbed Full Movie – Storyline :</p>
      </div>
      <div style="margin: 10px; padding: 50px;">
-      <a style=" font-size: 18px; font-weight: 800;">BrahMastra 2022 Hindi 720p HDRip</a><p style="color: gray;">Shiva, a DJ learns about his strange connection with the element of fire and also holds the power to awaken the Brahmastra, a supernatural weapon that is said to be able to destroy the universe, capable of destroying creation and vanquishing all beings. On the other hand, Junoon, the queen of dark forces is also on a quest to get hold of the Brahmastra.</p>
+     <p style="color: gray;">Download Prey 2022 Hindi 720p WEBRip: A skilled Comanche warrior protects her tribe from a highly evolved alien predator that hunts humans for sport, fighting against wilderness, dangerous colonisers and this mysterious creature to keep her people safe.</p>
      </div>
      <div style="color: red; text-align: center; font-size: 35px; font-weight: 800;">
-      <p>Download BrahMastra 2022 Hindi CAMRip Full Movie – Review :</p>
+      <p>Download Prey 2022 HDRip Hindi Full Movie – Review :</p>
      </div>
      <div style="margin: 10px; padding: 50px;">
-      <p style="color: gray;">Even after a disappointing string of movies from Bollywood in the last year, this movie gave hope and looked promising. The trailer looked amazing and everything looked positive. But Bollywood struck again with their mediocrity. The trailer is designed to fool the audience. Again, the film falls flat on its choppy story and bad screenplay. The makers of this film tried to cover it up with spectacular visuals but the story has more holes than swiss cheese. Amitabh Bachchan is impressive but can’t be expected to carry the entire film. Same old clichés and masala love stories have been added in this film also. And it feels the movie is half hour too long. Overall, the hype is not real and not worth it. The two stars are for Amitabh Bachchan and visual effects.</p>
+      <a style=" font-size: 18px; font-weight: 800;">Prey Review:</a><p style="color: gray;">Prey is solid genre fare in its own right, but it also brings the Predator series back on track after getting derailed with the mess of 2018’s The Predator. Amber Midthunder is a great lead as Naru and the action and spectacle delivers. The third act runs a bit long and maybe could’ve been streamlined, but aside from that this is great enetertainment. I love two thirds of this movie. I love Naru slowly uncovering the Predator’s presence. I love this native American world and everybody’s performances. It is better than anything since the newness of the original. I do have an issue with the final battle. The more daring ending would be an epic death. I never got the sense that she could prevail over the Predator. I prefer the non Hollywood happy ending. Nevertheless, this is still a great Predator film.</p>
      </div>
 
   <hr style="height:2px;border:none;color:#252525;background-color:#252525; margin-left: 20px; margin-right: 20px;">
