--- a/Movies.html
+++ b/Movies.html
@@ -89,7 +89,7 @@
         </div>
         <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
           <a href="Prey.html" class="block relative h-48 rounded overflow-hidden">
-            <img alt="Prey" class="object-cover object-center w-full h-full block" src="/Images/Prey.jpg">
+            <img alt="Prey" class="object-cover object-center w-full h-full block" src="./Images/Prey.jpg">
           </a>
           <div class="mt-4">
             <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">HollyWood</h3>
