--- a/About.html
+++ b/About.html
@@ -9,46 +9,41 @@
     <link rel="stylesheet" type="text/css" href="/MoviesFolder/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="stl.css">
+    <link rel="icon" type="image/x-icon" href="./ico/name.ico">
     <link rel="stylesheet" type="text/css" href="Background.css">
 </head>
 <body>
-  <header class="text-gray-600 body-font">
+  <header class="text-black-600 body-font">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
       <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewbox="0 0 24 24">
           <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
         </svg>
-        <span class="ml-3 text-xl">Spipixel</span>
+        <span class=" text-blue-500 font-bold ml-3 text-xl">Spipixel</span>
       </a>
       <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-Black-400	flex flex-wrap items-center text-base justify-center">
         <div class="navbar">
-            <a class="mr-5 hover:text-gray-900" href="index.html">Home</a>
-            <a class="mr-5 hover:text-gray-900" href="Movies.html">Movies</a>
-            <a class="mr-5 hover:text-gray-900" href="Shop.html">Shop</a>
-            <a class="mr-5 hover:text-gray-900" href="Blog.html">Blog</a>
-            <a class="mr-5 hover:text-gray-900" href="About.html">About</a>
+            <a class="mr-5 hover:text-gray-900" style="color: white; font-weight: 500;" href="index.html">Home</a>
+            <a class="mr-5 hover:text-gray-900" style="color: white; font-weight: 500" href="Movies.html">Movies</a>
+            <a class="mr-5 hover:text-gray-900" style="color: white; font-weight: 500" href="Shop.html">Shop</a>
+            <a class="mr-5 hover:text-gray-900" style="color: white; font-weight: 500" href="Blog.html">Blog</a>
+            <a class="mr-5 hover:text-gray-900" style="color: white; font-weight: 500" href="About.html">About</a>
         </div>
         <div class="navbar">
             <div class="dropdown">
-              <button class="dropbtn">Dropdown 
+              <button class="dropbtn">More
                 <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
+                <a href="#">Class 9th</a>
+                <a href="Books.html">Books</a>
                 <a href="#">Link 3</a>
               </div>
             </div> 
           </div>
       </nav>
-      <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">Contact
-        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewbox="0 0 24 24">
-          <path d="M5 12h14M12 5l7 7-7 7"></path>
-        </svg>
-      </button>
     </div>
   </header>
-
 
       <section class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto">
