--- a/Login.html
+++ b/Login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" type="text/css" href="style.1.css">
+    <link rel="icon" type="image/x-icon" href="./ico/name.ico">
 </head>
 <body>
     <div class="container">
