--- a/Blog.html
+++ b/Blog.html
@@ -46,8 +46,8 @@
   </header>
 
 
-  <h1 class="sm:text-4xl text-4xl text-9xl font-medium title-font mb-4 text-gray-900 text-left">Atricle</h1>
-<pre class="font-medium title-font mb-4 text-black-900">
+  <h1 style="margin: 20px;" class="sm:text-4xl text-4xl text-9xl font-medium title-font mb-4 text-gray-900 text-left">Atricle</h1>
+<pre style="margin:20px;" class="font-medium title-font mb-4 text-black-900">
 <i><b>
 Using this Website you can download anything that you want
 just go in Contact tab and write a message with valid email 
@@ -56,11 +56,11 @@ in weekend.
 </b>
 </i>
 </pre>
-
+<hr>
 <pre>
-  <b><h2 class="sm:text-3xl text-2xl text-6xl font-medium title-font mb-4 text-gray-900">INFORMATION</h2></b>
-  <p>To contact our team you can mail in this Gmail
-<p class="text-blue-600" >techdevloper02@gmail.com</p> 
+  <b><h2 style="margin:20px;" class="sm:text-3xl text-2xl text-6xl font-medium title-font mb-4 text-gray-900">INFORMATION</h2></b>
+  <p style="margin: 20px;">To contact our team you can mail in this Gmail
+<p style="margin: 20px;" class="text-blue-600" >techdevloper02@gmail.com</p> 
   </p>
 </pre>
 <hr>
