--- a/condition.html
+++ b/condition.html
@@ -46,6 +46,8 @@
     </div>
   </header>
 
+  <button id="btnmy" onclick="myfunction">Click Me</button>
+
  <hr style="height:2px;border:none;color:#252525;background-color:#252525; margin-left: 50px; margin-right: 50px; margin-block-end: 20px; margin-top: 20px;">
  <footer class="text-gray-600 body-font">
     <div class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
@@ -137,7 +139,8 @@
         </span>
       </div>
     </div>
-  </footer>    
+  </footer>
+  <script  src="offline.js"></script>   
 
 </body>
 </html>
