--- a/Blog.html
+++ b/Blog.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="stl.css">
 </head>
+
 <body>
+  
   <header class="text-black-600 body-font">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
       <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
@@ -21,13 +23,12 @@
         </svg>
         <span class=" text-blue-500 font-bold ml-3 text-xl">Spipixel</span>
       </a>
-      <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-Black-400	flex flex-wrap items-center text-base justify-center">
+      <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l	flex flex-wrap items-center text-base justify-center">
         <div class="navbar">
-            <a class="mr-5 hover:text-gray-900" style="color: white; font-weight: 500;" href="index.html">Home</a>
-            <a class="mr-5 hover:text-gray-900" style="color: white; font-weight: 500" href="Movies.html">Movies</a>
-            <a class="mr-5 hover:text-gray-900" style="color: white; font-weight: 500" href="Shop.html">Shop</a>
-            <a class="mr-5 hover:text-gray-900" style="color: white; font-weight: 500" href="Blog.html">Blog</a>
-            <a class="mr-5 hover:text-gray-900" style="color: white; font-weight: 500" href="About.html">About</a>
+            <a class="mr-5 hover:text-gray-900" style=" border-radius: 15px; background-color: #48aad8; color: black;  font-weight: 500;" href="index.html">Home</a>
+            <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="Shop.html">Shop</a>
+            <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="Blog.html">Blog</a>
+            <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="About.html">About</a>
         </div>
         <div class="navbar">
             <div class="dropdown">
@@ -58,9 +59,11 @@ in weekend.
 </pre>
 <hr>
 <pre>
-  <b><h2 style="margin:20px;" class="sm:text-3xl text-2xl text-6xl font-medium title-font mb-4 text-gray-900">INFORMATION</h2></b>
-  <p style="margin: 20px;">To contact our team you can mail in this Gmail
-<p style="margin: 20px;" class="text-blue-600" >techdevloper02@gmail.com</p> 
+  <b><h2 style="margin: 5px;" class="sm:text-3xl text-2xl text-6xl font-medium title-font mb-4 text-gray-900">INFORMATION</h2></b>
+  <p style="margin: 5px;">To contact our team you can mail in this Gmail 
+<p style="margin: 5px;" class="text-blue-600" >techdevloper02@gmail.com</p>
+<p style="margin: 5px; ">Here New Launched minecraft server Server is created by our new team member Hyper8107</p>
+<p style="margin: 5px; " class="text-blue-600" >spipixelnetwork.tk</p>
   </p>
 </pre>
 <hr>
