--- a/SignInError.html
+++ b/SignInError.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="Background.css">
 </head>
 <body>
+
   <header class="text-black-600 body-font">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
       <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
@@ -22,13 +23,12 @@
         </svg>
         <span class=" text-blue-500 font-bold ml-3 text-xl">Spipixel</span>
       </a>
-      <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-Black-400	flex flex-wrap items-center text-base justify-center">
+      <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l	flex flex-wrap items-center text-base justify-center">
         <div class="navbar">
-            <a class="mr-5 hover:text-gray-900" style="color: white; font-weight: 500;" href="index.html">Home</a>
-            <a class="mr-5 hover:text-gray-900" style="color: white; font-weight: 500" href="Movies.html">Movies</a>
-            <a class="mr-5 hover:text-gray-900" style="color: white; font-weight: 500" href="Shop.html">Shop</a>
-            <a class="mr-5 hover:text-gray-900" style="color: white; font-weight: 500" href="Blog.html">Blog</a>
-            <a class="mr-5 hover:text-gray-900" style="color: white; font-weight: 500" href="About.html">About</a>
+            <a class="mr-5 hover:text-gray-900" style=" border-radius: 15px; background-color: #48aad8; color: black;  font-weight: 500;" href="index.html">Home</a>
+            <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="Shop.html">Shop</a>
+            <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="Blog.html">Blog</a>
+            <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="About.html">About</a>
         </div>
         <div class="navbar">
             <div class="dropdown">
