--- a/Books.html
+++ b/Books.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-    <title>Home</title>
+    <title>Books</title>
     <link rel="stylesheet" type="text/css" href="/MoviesFolder/style.css">
     <link rel="icon" type="image/x-icon" href="./ico/name.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -25,7 +25,7 @@
       </a>
       <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l	flex flex-wrap items-center text-base justify-center">
         <div class="navbar">
-            <a class="mr-5 hover:text-gray-900" style=" border-radius: 15px; background-color: #48aad8; color: black;  font-weight: 500;" href="index.html">Home</a>
+            <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500;" href="index.html">Home</a>
             <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="Shop.html">Shop</a>
             <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="Blog.html">Blog</a>
             <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="About.html">About</a>
