--- a/Shop.html
+++ b/Shop.html
@@ -25,8 +25,8 @@
       </a>
       <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l	flex flex-wrap items-center text-base justify-center">
         <div class="navbar">
-            <a class="mr-5 hover:text-gray-900" style=" border-radius: 15px; background-color: #48aad8; color: black;  font-weight: 500;" href="index.html">Home</a>
-            <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="Shop.html">Shop</a>
+            <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500;" href="index.html">Home</a>
+            <a class="mr-5 hover:text-gray-900" style="border-radius: 15px; background-color: #48aad8; color: black;  font-weight: 500" href="Shop.html">Shop</a>
             <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="Blog.html">Blog</a>
             <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="About.html">About</a>
         </div>
