--- a/Shop.html
+++ b/Shop.html
@@ -90,20 +90,15 @@
                   </a>
                 </span>
               </div>
-              <p class="leading-relaxed">this source code is free of cost without any extra charge , I hope this code is help full for you and don't forgot to subscribe my channel spipixel</p>
+              <p class="leading-relaxed">this source code is free of cost without any extra charge , I hope this code is help full for you and don't forgot to subscribe my channel spipixel,     ----   To Download Code Select Version</p>
               <div class="flex mt-6 items-center pb-5 border-b-2 border-gray-100 mb-5">
-                <div class="flex">
-                  <span class="mr-3">Versions</span>
-                  <button href="Error Page.html" class="border-2 border-gray-300 rounded-full w-6 h-6 focus:outline-none"></button>
-                  <button href="Error Page.html" class="border-2 border-gray-300 ml-1 bg-gray-700 rounded-full w-6 h-6 focus:outline-none"></button>
-                  <button href="Error Page.html" class="border-2 border-gray-300 ml-1 bg-indigo-500 rounded-full w-6 h-6 focus:outline-none"></button>
-                </div>
                 <div class="flex ml-6 items-center">
                   <span class="mr-3">Versions</span>
                   <div class="relative">
                     <select name="links" id="" size="1" onchange="document.location.href=this.value;" class="rounded border appearance-none border-gray-300 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-200 focus:border-indigo-500 text-base pl-3 pr-10">
-                      <option value="Shop.html">Latest</option>
-                      <option value="ProductError.html">Not available at this time </option>
+                      <option style="color: blue;" value="Shop.html">Select Version</option>
+                      <option value="./Shop/Latest.html">Latest Version</option>
+                      <option value="./Shop/Older.html">Older</option>
                     </select>
                     <span class="absolute right-0 top-0 h-full w-10 text-center text-gray-600 pointer-events-none flex items-center justify-center">
                       <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4" viewbox="0 0 24 24">
@@ -115,7 +110,6 @@
               </div>
               <div class="flex">
                 <span class="title-font font-medium text-2xl text-gray-900">$0.0</span>
-                <button style="width: 200px;" class="flex ml-auto text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded"><a href="condition.html">Download</a></button>
                 <button class="rounded-full w-10 h-10 bg-gray-200 p-0 border-0 inline-flex items-center justify-center text-gray-500 ml-4">
                   <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewbox="0 0 24 24">
                     <path d="M20.84 4.61a5.5 5.5 0 00-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 00-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 000-7.78z"></path>
