--- a/Learn-More.html
+++ b/Learn-More.html
@@ -181,16 +181,16 @@
             <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="About.html">About</a>
         </div>
         <div class="navbar">
-            <div class="dropdown">
-              <button class="dropbtn">More
-                <i class="fa fa-caret-down"></i>
-              </button>
-              <div class="dropdown-content">
-                <a href="#">Class 9th</a>
-                <a href="Books.html">Books</a>
-                <a href="#">Link 3</a>
-              </div>
-            </div> 
+          <div class="dropdown">
+            <button class="dropbtn">More
+              <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+              <a href="ProductError.html">Video</a>
+              <a href="./pages/Products.html">Products</a>
+              <a href="ProductError.html">Books</a>
+            </div>
+          </div> 
           </div>
       </nav>
     </div>
