--- a/Shop/Latest.html
+++ b/Shop/Latest.html
@@ -21,12 +21,12 @@
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewbox="0 0 24 24">
           <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
         </svg>
-        <span class=" text-blue-500 font-bold ml-3 text-xl">Spipixel</span>
+        <span class=" text-blue-500 font-bold ml-3 text-xl"><a href="../index.html"> Spipixel</a></span>
       </a>
       <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l	flex flex-wrap items-center text-base justify-center">
         <div class="navbar">
             <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500;" href="../index.html">Home</a>
-            <a class="mr-5 hover:text-gray-900" style="border-radius: 15px; background-color: #48aad8; color: black;  font-weight: 500" href="../Shop.html">Shop</a>
+            <a class="mr-5 hover:text-gray-900" style="border-radius: 15px; color: black;  font-weight: 500" href="../Shop.html">Shop</a>
             <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="../Blog.html">Blog</a>
             <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="../About.html">About</a>
         </div>
@@ -36,9 +36,9 @@
                 <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-content">
-                <a href="#">Class 9th</a>
-                <a href="Books.html">Books</a>
-                <a href="#">Link 3</a>
+                <a href="../ProductError.html">Video</a>
+                <a href="../pages/shop.html">Products</a>
+                <a href="../ProductError.html">Books</a>
               </div>
             </div> 
           </div>
@@ -129,9 +129,9 @@
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewbox="0 0 24 24">
               <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
             </svg>
-            <span class="ml-3 text-xl"><a href="index.html">Spipixel</a></span>
+            <span class="ml-3 text-xl"><a href="../index.html">Spipixel</a></span>
           </a>
-          <p class="mt-2 text-sm text-gray-500"><a href="About.html">About</a></p>
+          <p class="mt-2 text-sm text-gray-500"><a href="../About.html">About</a></p>
         </div>
         <div class="flex-grow flex flex-wrap md:pl-20 -mb-10 md:mt-0 mt-10 md:text-left text-center">
           <div class="lg:w-1/4 md:w-1/2 w-full px-4">
@@ -144,10 +144,10 @@
                 <a href="https://www.instagram.com/spipixel12/" class="text-gray-600 hover:text-gray-800">Instagram</a>
               </li>
               <li>
-                <a href="Error Page.html" class="text-gray-600 hover:text-gray-800">Facebook</a>
+                <a href="../Error Page.html" class="text-gray-600 hover:text-gray-800">Facebook</a>
               </li>
               <li>
-                <a href="About.html" class="text-gray-600 hover:text-gray-800">About</a>
+                <a href="../About.html" class="text-gray-600 hover:text-gray-800">About</a>
               </li>
             </nav>
           </div>
@@ -155,16 +155,16 @@
             <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
             <nav class="list-none mb-10">
               <li>
-                <a href="index.html" class="text-gray-600 hover:text-gray-800">Home</a>
+                <a href="../index.html" class="text-gray-600 hover:text-gray-800">Home</a>
               </li>
               <li>
-                <a href="Contact.css" class="text-gray-600 hover:text-gray-800">Contact</a>
+                <a href="../Contact.css" class="text-gray-600 hover:text-gray-800">Contact</a>
               </li>
               <li>
-                <a href="Shop.html" class="text-gray-600 hover:text-gray-800">Shop</a>
+                <a href="../Shop.html" class="text-gray-600 hover:text-gray-800">Shop</a>
               </li>
               <li>
-                <a href="About.html" class="text-gray-600 hover:text-gray-800">About</a>
+                <a href="../About.html" class="text-gray-600 hover:text-gray-800">About</a>
               </li>
             </nav>
           </div>
@@ -175,13 +175,7 @@
                 <a href="" class="text-gray-600 hover:text-gray-800">Spipixel</a>
               </li>
               <li>
-                <a href="" class="text-gray-600 hover:text-gray-800">Spipixel</a>
-              </li>
-              <li>
-                <a href="" class="text-gray-600 hover:text-gray-800">Spipixel</a>
-              </li>
-              <li>
-                <a href="" class="text-gray-600 hover:text-gray-800">Spipixel</a>
+                <a href="" class="text-gray-600 hover:text-gray-800">Hyper8107</a>
               </li>
             </nav>
           </div>
