--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewbox="0 0 24 24">
           <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
         </svg>
-        <span class=" text-blue-500 font-bold ml-3 text-xl">Spipixel</span>
+        <span class=" text-blue-500 font-bold ml-3 text-xl"> <a style="color: rgb(65, 65, 231); font-size: 24px; font-weight: 10px; " href="index.html">Spipixel</a> </span>
       </a>
       <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l	flex flex-wrap items-center text-base justify-center">
         <div class="navbar">
@@ -89,9 +89,9 @@
                 <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-content">
-                <a href="#">Class 9th</a>
-                <a href="Books.html">Books</a>
-                <a href="#">Link 3</a>
+                <a href="ProductError.html">Video</a>
+                <a href="./pages/Products.html">Products</a>
+                <a href="ProductError.html">Books</a>
               </div>
             </div> 
           </div>
@@ -100,13 +100,6 @@
   </header>
 
 
-  <div class="icon-bar">
-    <a href="#" class="facebook"><i class="fa fa-facebook"></i></a> 
-    <a href="#" class="twitter"><i class="fa fa-twitter"></i></a> 
-    <a href="#" class="google"><i class="fa fa-google"></i></a> 
-    <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-    <a href="#" class="youtube"><i class="fa fa-youtube"></i></a> 
-  </div>
 
       <section class="text-gray-600 body-font">
         <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
@@ -141,7 +134,7 @@
               <div class="md:flex-grow">
                 <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">All Chapters notes of CBSE Science Free Download From Here</h2>
                 <p class="leading-relaxed">This Page you can find all Chapters of Science notes </p>
-                <a href="Science.html" class="text-indigo-500 inline-flex items-center mt-4">Download
+                <a href="./pages/Science.html" class="text-indigo-500 inline-flex items-center mt-4">Download
                   <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M5 12h14"></path>
                     <path d="M12 5l7 7-7 7"></path>
@@ -196,6 +189,7 @@
 
 
     <hr>
+
       <footer class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
           <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
@@ -249,13 +243,7 @@
                   <a href="" class="text-gray-600 hover:text-gray-800">Spipixel</a>
                 </li>
                 <li>
-                  <a href="" class="text-gray-600 hover:text-gray-800">Spipixel</a>
-                </li>
-                <li>
-                  <a href="" class="text-gray-600 hover:text-gray-800">Spipixel</a>
-                </li>
-                <li>
-                  <a href="" class="text-gray-600 hover:text-gray-800">Spipixel</a>
+                  <a href="" class="text-gray-600 hover:text-gray-800">Hyper8107</a>
                 </li>
               </nav>
             </div>
