--- a/Shop.html
+++ b/Shop.html
@@ -7,7 +7,7 @@
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <title>Shop</title>
     <link rel="stylesheet" type="text/css" href="Background.css">
-    <link rel="stylesheet" type="text/css" href="/MoviesFolder/style.css">
+    <link rel="stylesheet" type="text/css" href="./MoviesFolder/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="stl.css">
     <link rel="stylesheet" type="text/css" href="Background.css">
