--- a/Error Page.html
+++ b/Error Page.html
@@ -16,30 +16,30 @@
 
   <header class="text-black-600 body-font">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-      <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewbox="0 0 24 24">
-          <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-        </svg>
-        <span class=" text-blue-500 font-bold ml-3 text-xl"> <a style="color: rgb(65, 65, 231); font-size: 24px; font-weight: 10px; " href="index.html">Spipixel</a> </span>
-      </a>
+      <div>
+        <img src="./Images/logo.png" alt="">
+      </div>
       <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l	flex flex-wrap items-center text-base justify-center">
-        <div class="navbar">
-            <a class="mr-5 hover:text-gray-900" style=" border-radius: 15px; color: black;  font-weight: 500;" href="index.html">Home</a>
-            <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="Shop.html">Shop</a>
-            <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="Blog.html">Blog</a>
-            <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="About.html">About</a>
+        <div class="navbar flex-div">
+            <img src="./Images/home.png" alt="">
+            <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500;" href="index.html">Home</a>
+            <img src="./Images/shop.png" alt="">  
+            <a class="mr-5 hover:text-gray-900" style=" transition: 0.2s; color: black;  font-weight: 500" href="Shop.html">Shop</a>
+            <img src="./Images/Blog.png" alt="">
+            <a class="mr-5 hover:text-gray-900" style="  transition: 0.2s; color: black;  font-weight: 500" href="Blog.html">Blog</a>
+            <img src="./Images/about.png" alt="">
+            <a class="mr-5 hover:text-gray-900" style=" transition: 0.2s; color: black;  font-weight: 500" href="About.html">About</a>
         </div>
-        <div class="navbar">
-          <div class="dropdown">
-            <button class="dropbtn">More
-              <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-              <a href="ProductError.html">Video</a>
-              <a href="./pages/Products.html">Products</a>
-              <a href="ProductError.html">Books</a>
-            </div>
-          </div>  
+        <div class="navbar flex-div">
+            <div class="dropdown ">
+              <button style="transition: 0.2s;" class="dropbtn"><img src="./Images/show-more.png" alt="">More
+              </button>
+              <div class="dropdown-content">
+                <a href="ProductError.html">Video</a>
+                <a href="./pages/Products.html">Products</a>
+                <a href="ProductError.html">Books</a>
+              </div>
+            </div> 
           </div>
       </nav>
     </div>
