--- a/index.html
+++ b/index.html
@@ -70,23 +70,23 @@
 
   <header class="text-black-600 body-font">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-      <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewbox="0 0 24 24">
-          <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-        </svg>
-        <span class=" text-blue-500 font-bold ml-3 text-xl"> <a style="color: rgb(65, 65, 231); font-size: 24px; font-weight: 10px; " href="index.html">Spipixel</a> </span>
-      </a>
+      <div>
+        <img src="./Images/logo.png" alt="">
+      </div>
       <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l	flex flex-wrap items-center text-base justify-center">
-        <div class="navbar">
+        <div class="navbar flex-div">
+            <img src="./Images/home.png" alt="">
             <a class="mr-5 hover:text-gray-900" style=" border-radius: 15px; background-color: #48aad8; color: black;  font-weight: 500;" href="index.html">Home</a>
-            <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="Shop.html">Shop</a>
-            <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="Blog.html">Blog</a>
-            <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500" href="About.html">About</a>
+            <img src="./Images/shop.png" alt="">  
+            <a class="mr-5 hover:text-gray-900" style=" transition: 0.2s; color: black;  font-weight: 500" href="Shop.html">Shop</a>
+            <img src="./Images/Blog.png" alt="">
+            <a class="mr-5 hover:text-gray-900" style=" transition: 0.2s; color: black;  font-weight: 500" href="Blog.html">Blog</a>
+            <img src="./Images/about.png" alt="">
+            <a class="mr-5 hover:text-gray-900" style=" transition: 0.2s; color: black;  font-weight: 500" href="About.html">About</a>
         </div>
-        <div class="navbar">
-            <div class="dropdown">
-              <button class="dropbtn">More
-                <i class="fa fa-caret-down"></i>
+        <div class="navbar flex-div">
+            <div class="dropdown ">
+              <button style="transition: 0.2s;" class="dropbtn"><img src="./Images/show-more.png" alt="">More
               </button>
               <div class="dropdown-content">
                 <a href="ProductError.html">Video</a>
@@ -98,6 +98,7 @@
       </nav>
     </div>
   </header>
+
 
 
 
@@ -113,7 +114,7 @@
             <p class="mb-8 leading-relaxed">I hope this video tutorial is helpful for you , i cover C , Python or HTML Content I will try to cover more contents in future</p>
             <div class="flex justify-center">
               <div class="tooltip">
-                <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg"><a href="VideoPage.html">View pages</a></button>
+                <button style="transition: 0.2s;" class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg"><a href="VideoPage.html">View pages</a></button>
                 <span class="tooltiptext"> You can Watch Videos form this website </span>
               </div>
             </div>
@@ -275,7 +276,6 @@
           </div>
         </div>
       </footer>
-
 
 </body>
 </html>
